--- a/app/views/personal-details.html
+++ b/app/views/personal-details.html
@@ -8,77 +8,186 @@ serviceName }} – GOV.UK Prototype Kit {% endblock %} {% block beforeContent %}
     <h1 class="govuk-heading-xl">Personal Details</h1>
 
     <form class="form" action="/doc-to-upload" method="post">
-      <p>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="full-name">
-          Full name
-          </label>
-          <input class="govuk-input" id="full-name" name="full-name" type="text" spellcheck="false" autocomplete="name">
-        </div>
-      </p>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="full-name"> Full name </label>
+        <input
+          class="govuk-input"
+          id="full-name"
+          name="full-name"
+          type="text"
+          spellcheck="false"
+          autocomplete="name"
+        />
+      </div>
 
       <fieldset class="govuk-fieldset">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="address-line-1">
+            Address line 1
+          </label>
+          <input
+            class="govuk-input"
+            id="address-line-1"
+            name="address-line-1"
+            type="text"
+            autocomplete="address-line1"
+          />
+        </div>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-line-1">
-      Address line 1
-    </label>
-    <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" autocomplete="address-line1">
-  </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="address-line-2">
+            Address line 2 (optional)
+          </label>
+          <input
+            class="govuk-input"
+            id="address-line-2"
+            name="address-line-2"
+            type="text"
+            autocomplete="address-line2"
+          />
+        </div>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-line-2">
-      Address line 2 (optional)
-    </label>
-    <input class="govuk-input" id="address-line-2" name="address-line-2" type="text" autocomplete="address-line2">
-  </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="address-town"> Town or city </label>
+          <input
+            class="govuk-input govuk-!-width-two-thirds"
+            id="address-town"
+            name="address-town"
+            type="text"
+            autocomplete="address-level2"
+          />
+        </div>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-town">
-      Town or city
-    </label>
-    <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" type="text" autocomplete="address-level2">
-  </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="address-county">
+            County (optional)
+          </label>
+          <input
+            class="govuk-input govuk-!-width-two-thirds"
+            id="address-county"
+            name="address-county"
+            type="text"
+          />
+        </div>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-county">
-      County (optional)
-    </label>
-    <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="address-county" type="text">
-  </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="address-postcode"> Postcode </label>
+          <input
+            class="govuk-input govuk-input--width-10"
+            id="address-postcode"
+            name="address-postcode"
+            type="text"
+            autocomplete="postal-code"
+          />
+        </div>
+      </fieldset>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Postcode
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text" autocomplete="postal-code">
-  </div>
-
-</fieldset>
-
-
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="email">
-        Email address
-      </label>
-      <div id="email-hint" class="govuk-hint">
-        We’ll only use this to update you on the verification process
+      <div class="govuk-form-group">
+        <fieldset
+          class="govuk-fieldset"
+          role="group"
+          aria-describedby="date-of-birth-hint"
+        >
+          <label class="govuk-label"> Date of birth </label>
+          <div id="date-of-birth-hint" class="govuk-hint">
+            For example, 27 3 2007
+          </div>
+          <div class="govuk-date-input" id="date-of-birth">
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label
+                  class="govuk-label govuk-date-input__label"
+                  for="date-of-birth-day"
+                >
+                  Day
+                </label>
+                <input
+                  class="govuk-input govuk-date-input__input govuk-input--width-2"
+                  id="date-of-birth-day"
+                  name="date-of-birth-day"
+                  type="text"
+                  inputmode="numeric"
+                />
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label
+                  class="govuk-label govuk-date-input__label"
+                  for="date-of-birth-month"
+                >
+                  Month
+                </label>
+                <input
+                  class="govuk-input govuk-date-input__input govuk-input--width-2"
+                  id="date-of-birth-month"
+                  name="date-of-birth-month"
+                  type="text"
+                  inputmode="numeric"
+                />
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label
+                  class="govuk-label govuk-date-input__label"
+                  for="date-of-birth-year"
+                >
+                  Year
+                </label>
+                <input
+                  class="govuk-input govuk-date-input__input govuk-input--width-4"
+                  id="date-of-birth-year"
+                  name="date-of-birth-year"
+                  type="text"
+                  inputmode="numeric"
+                />
+              </div>
+            </div>
+          </div>
+        </fieldset>
       </div>
-      <input class="govuk-input" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" autocomplete="email">
-      <br />
-      <br />
-      <label class="govuk-label" for="email">
-        Confirm email address
-      </label>
-      <input class="govuk-input" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" autocomplete="email">
-    </div>
 
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="telephone-number">
-        UK telephone number
-      </label>
-      <input class="govuk-input govuk-input--width-20" id="telephone-number" name="telephone-number" type="tel" autocomplete="tel">
-    </div>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="email"> Email address </label>
+        <div id="email-hint" class="govuk-hint">
+          We’ll only use this to update you on the verification process
+        </div>
+        <input
+          class="govuk-input"
+          id="email"
+          name="email"
+          type="email"
+          spellcheck="false"
+          aria-describedby="email-hint"
+          autocomplete="email"
+        />
+        <br />
+        <br />
+        <label class="govuk-label" for="email"> Confirm email address </label>
+        <input
+          class="govuk-input"
+          id="confirm-email"
+          name="email"
+          type="email"
+          spellcheck="false"
+          aria-describedby="email-hint"
+          autocomplete="email"
+        />
+      </div>
+
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="telephone-number">
+          UK telephone number
+        </label>
+        <input
+          class="govuk-input govuk-input--width-20"
+          id="telephone-number"
+          name="telephone-number"
+          type="tel"
+          autocomplete="tel"
+        />
+      </div>
 
       <button class="govuk-button" data-module="govuk-button">Continue</button>
     </form>
