add reworked index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,34 +10,29 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Prototype your service using GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
+        Council Home screen
+        <!-- <span class="govuk-caption-xl">{{releaseVersion}}</span> -->
       </h1>{{releaseVersion | log }}
-      <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
-      </p>
 
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
-      </p>
+      <h2 class="govuk-heading-m">Council Tax</h2>
+      <p class="govuk-body">
+        Council Tax is a tax on council property.</p>
 
-      <h2 class="govuk-heading-m">About this page</h2>
+      <h2 class="govuk-heading-m">Benefits</h2>
+      <p class="govuk-body">
+        Housing Benefit can help you pay your rent if you're unemployed, on a low income or claiming benefits. It's being replaced by Universal Credit.</p>
 
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
+      <h2 class="govuk-heading-m">Blue badge application</h2>
+      <p class="govuk-body">
+        Blue Badges help people with disabilities or health conditions park closer to their destination.</p>
 
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
+      <h2 class="govuk-heading-m"><a href="/my-council-account">My council account</a></h2>
+      <p class="govuk-body">
+        Log in to your account or create a new one.</p>
 
-      <h2 class="govuk-heading-m">Examples and documentation</h2>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="/docs/tutorials-and-examples">Tutorials and templates</a>
-        </li>
-        <li>
-          <a href="https://design-system.service.gov.uk">GOV.UK Design System</a>
-        </li>
-      </ul>
+      <h2 class="govuk-heading-m">Parking permit</h2>
+      <p class="govuk-body">
+        A permit will enable the holder to park in any vacant on-street resident parking permit holder's space, or if applicable, shared use space within the permits' zone of issue, between the hours displayed on signs. These are found at the entry points to the zone, or adjacent to some parking bays.</p>
     </div>
   </div>
 
