--- a/app/views/registration-confirmation.html
+++ b/app/views/registration-confirmation.html
@@ -5,7 +5,10 @@
   <div class="govuk-grid-column-two-thirds">
     <p>We have sent you a confirmation email.</p>
     <h2 class="govuk-heading-m">What happens next</h2>
-    <p>You can log in again at any time via www.loginagain.com</p>
+    <p>
+      You can log in again at any time via
+      <a href="my-council-account">www.loginagain.com</a>
+    </p>
     <p>
       <a
         href="https://www.gov.uk/service-manual/user-centred-design/resources/patterns/feedback-pages.html"
