Create upload confirmation and link to page

--- a/app/views/upload-your-document.html
+++ b/app/views/upload-your-document.html
@@ -58,7 +58,7 @@ serviceName }} – GOV.UK Prototype Kit {% endblock %} {% block beforeContent %}
 
     {% from "govuk/components/button/macro.njk" import govukButton %} {{
     govukButton({ text: "Submit and continue", preventDoubleClick: true, href:
-    "#" }) }}
+    "upload-confirmation" }) }}
   </div>
 </div>
 
