Create check answers page and link to it

--- a/app/views/confirm-services-to-share.html
+++ b/app/views/confirm-services-to-share.html
@@ -99,7 +99,7 @@ serviceName }} – GOV.UK Prototype Kit {% endblock %} {% block beforeContent %}
       </p>
       <p>
         {% from "govuk/components/button/macro.njk" import govukButton %} {{
-        govukButton({ text: "Continue" }) }}
+        govukButton({ text: "Continue", href: "check-answers" }) }}
       </p>
     </form>
   </div>
